Fix overflow issue

--- a/styles/component/artWork.module.scss
+++ b/styles/component/artWork.module.scss
@@ -218,6 +218,7 @@
       padding-bottom: 0;
       padding-left: 0;
       padding-right: rem(60px);
+      overflow: hidden;
     }
   }
 
